# jp_study

./: .gitignore  Cargo.toml  Dioxus.toml
src/: main.rs
src/components/: adjective.rs  mod.rs  quantifier.rs
